button color change

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </h1>
       <p>Vi forbedrer din forretning og din digitale tilstedeværelse gennem datadrevet markedsføring. Og din pris afhænger af din tilfredshed.</p>
       <div class="buttons">
-        <a href="#" class="btn">Lær mere</a>
+        <a href="#" class="btn">Læs mere om os</a>
         <a href="#" class="btn btn-fill">Kontakt en af vores specialister</a>
       </div>
       <img class="organic-blob" src="assets/Organisk-blob (1) copy.png" alt="lineart" />
