--- a/index.html
+++ b/index.html
@@ -28,9 +28,17 @@
       <p>Vi forbedrer din forretning og din digitale tilstedeværelse gennem datadrevet markedsføring. Og din pris afhænger af din tilfredshed.</p>
       <div class="buttons">
         <a href="#" class="btn">Læs mere om os</a>
-        <a href="#" class="btn btn-fill">Kontakt en af vores specialister</a>
+        <a href="#" class="btn btn-fill">Kontakt en af vores specialister <span class="arrow">→</span></a>
       </div>
       <img class="organic-blob" src="assets/Organisk-blob (1) copy.png" alt="lineart" />
+    </section>
+    <section class="logo-grid">
+      <img src="assets/skall_logo.svg" alt="Logo 1" class="logo" />
+      <img src="assets/besteller.png" alt="Logo 2" class="logo" />
+      <img src="assets/Zizzi_logo-01.png" alt="Logo 3" class="logo" />
+      <img src="assets/logo-rotate.svg" alt="Logo 4" class="logo" />
+      <img src="assets/Logo_BK.webp" alt="Logo 5" class="logo" />
+      <img src="assets/noisy.webp" alt="Logo 6" class="logo" />
     </section>
 
     <section class="section-2">
@@ -65,7 +73,7 @@
             <div class="accordion-icon"></div>
           </div>
           <div class="accordion-content">
-            <p>From web development to mobile applications, we offer comprehensive digital solutions tailored to meet your specific business needs and objectives.</p>
+            <p>LinkedIn er en kraftfuld platform til professionelt netværk, der giver virksomheder mulighed for at skabe forbindelser til brancheledere, tiltrække topkandidater og opbygge meningsfulde relationer med potentielle kunder. Ved at dele værdifuldt indhold og vise din ekspertise kan du øge synligheden af dit brand, opbygge tillid og generere målrettede B2B-leads. LinkedIn's annonceringsværktøjer og analyser gør det desuden muligt at målrette præcist, hvilket gør platformen til et uundværligt værktøj for vækst og succes.</p>
           </div>
         </div>
 
@@ -75,7 +83,7 @@
             <div class="accordion-icon"></div>
           </div>
           <div class="accordion-content">
-            <p>Our diverse team of experts brings together years of industry experience, creative thinking, and technical excellence to deliver outstanding results.</p>
+            <p>TikTok er en hurtigt voksende platform, der giver virksomheder mulighed for at nå et bredt, globalt publikum gennem korte og engagerende videoer. Med sit fokus på kreativitet og trends giver TikTok en unik mulighed for at vise din virksomheds personlighed og skabe forbindelse til potentielle kunder på en autentisk måde. Platformens algoritme fremmer organisk rækkevidde, mens annoncer som In-Feed Ads og Branded Hashtag Challenges hjælper med at forstærke dit budskab, drive trafik og opbygge et engageret fællesskab.</p>
           </div>
         </div>
 
@@ -85,7 +93,7 @@
             <div class="accordion-icon"></div>
           </div>
           <div class="accordion-content">
-            <p>We follow an agile methodology that emphasizes collaboration, iterative development, and continuous improvement throughout the project lifecycle.</p>
+            <p>Snapchat er en dynamisk platform til at skabe forbindelse til et yngre og stærkt engageret publikum gennem kreativt og interaktivt indhold. Med funktioner som Stories, Lenses og Geofilters kan virksomheder opbygge brandkendskab og styrke brugernes interaktion på sjove og innovative måder. Snapchats annonceringsværktøjer tilbyder præcis målretning og målbare resultater, hvilket gør det til et ideelt valg for kampagner, der prioriterer autenticitet og øjeblikkelig engagement.</p>
           </div>
         </div>
 
@@ -95,7 +103,7 @@
             <div class="accordion-icon"></div>
           </div>
           <div class="accordion-content">
-            <p>Integrity, innovation, and client satisfaction form the cornerstone of our business philosophy, guiding every decision we make.</p>
+            <p>Pinterest er en visuel inspirationsplatform, der hjælper virksomheder med at fremvise deres produkter, inspirere kunder og drive trafik til deres hjemmesider. Ved at skabe iøjnefaldende pins og boards kan virksomheder nå et engageret publikum, der leder efter ideer og løsninger. Pinterests unikke søgefunktion og analyser giver dig mulighed for at forbinde med potentielle kunder på inspirationsstadiet og omdanne deres interesse til leads og salg.</p>
           </div>
         </div>
       </div>
