nyt indhold i accordion

--- a/index.html
+++ b/index.html
@@ -52,59 +52,68 @@
     </section>
 
     <section class="section-3 container">
-      <div class="subheading">Paid Social</div>
-      <h2>Hvilken paid social platform passer bedst til jeres brand?</h2>
+      <div class="subheading">Service Lines</div>
+      <h2>Hvilken service line ønsker du rådgivning og hjælp til?</h2>
       <p>Hver paid social platform tilbyder unikke muligheder for at nå jeres målgruppe og skabe engagement. Fra Metas brede rækkevidde til TikToks kreative storytelling – hver platform har sine styrker og formater, der kan tilpasses jeres brand. Her giver vi et overblik over, hvordan de forskellige platforme kan hjælpe med at styrke jeres digitale tilstedeværelse.</p>
 
       <div class="accordion">
         <div class="accordion-item">
           <div class="accordion-header">
-            <span class="accordion-title">Meta</span>
+            <span class="accordion-title">Paid Search</span>
             <div class="accordion-icon"></div>
           </div>
           <div class="accordion-content">
-            <p>Meta, som inkluderer Facebook og Instagram, er en alsidig platform til paid social marketing. Med detaljeret data om brugernes adfærd og interesser kan I skræddersy jeres kampagner til præcist at nå jeres målgruppe. Platformen tilbyder også forskellige annonceformater som video, billeder og karusseller, der er ideelle til at fremhæve jeres B2C fashion brand. Meta gør det muligt at opbygge både brandkendskab og direkte salg gennem engagerende og visuelt appellerende kampagner.</p>
+            <p>Vi analyserer jeres data for at identificere de mest profitable søgeord og målgrupper for jeres Google-annoncering. Paid search handler i 2024 om at målrette indsatsen, så hver annoncekrone arbejder optimalt.Vi ved, at Google-annoncering ofte er ét af flere ben i jeres marketing-indsats, hvilket stiller krav til ROI og evnerne til at lave kvalificerede tiltag.</p>
           </div>
         </div>
 
         <div class="accordion-item">
           <div class="accordion-header">
-            <span class="accordion-title">LinkedIn</span>
+            <span class="accordion-title">Paid Social</span>
             <div class="accordion-icon"></div>
           </div>
           <div class="accordion-content">
-            <p>LinkedIn er en kraftfuld platform til professionelt netværk, der giver virksomheder mulighed for at skabe forbindelser til brancheledere, tiltrække topkandidater og opbygge meningsfulde relationer med potentielle kunder. Ved at dele værdifuldt indhold og vise din ekspertise kan du øge synligheden af dit brand, opbygge tillid og generere målrettede B2B-leads. LinkedIn's annonceringsværktøjer og analyser gør det desuden muligt at målrette præcist, hvilket gør platformen til et uundværligt værktøj for vækst og succes.</p>
+            <p>Paid Social er en meget bred disciplin, som rummer mange specialer. Vi kender mulighederne og sammensætter altid en brugerdefineret struktur, som tager afsæt i det enkelte brand. Annoncering på sociale medier er en disciplin hvor konkurrencen øges kontinuerligt. Derfor går vi skridtet længere end standarden. Vi tager altid afsæt i en data-first struktur.</p>
           </div>
         </div>
 
         <div class="accordion-item">
           <div class="accordion-header">
-            <span class="accordion-title">TikTok</span>
+            <span class="accordion-title">SEO</span>
             <div class="accordion-icon"></div>
           </div>
           <div class="accordion-content">
-            <p>TikTok er en hurtigt voksende platform, der giver virksomheder mulighed for at nå et bredt, globalt publikum gennem korte og engagerende videoer. Med sit fokus på kreativitet og trends giver TikTok en unik mulighed for at vise din virksomheds personlighed og skabe forbindelse til potentielle kunder på en autentisk måde. Platformens algoritme fremmer organisk rækkevidde, mens annoncer som In-Feed Ads og Branded Hashtag Challenges hjælper med at forstærke dit budskab, drive trafik og opbygge et engageret fællesskab.</p>
+            <p>Med afsæt i jeres data identificerer vi de rette indsatsområder i jeres SEO-arbejde. Effektiv SEO er et resultat af, at vide hvor vi skal sætte ind. SEO er et håndværk og det virker kun så længe man får noget fra hånden. Vi ved at SEO ofte overlapper andre interne funktioner i virksomheder som stiller høje krav til forventet ROI, scoping og ressourcer til implementering. Det hjælper vi også gerne med.</p>
           </div>
         </div>
 
         <div class="accordion-item">
           <div class="accordion-header">
-            <span class="accordion-title">Snapchat</span>
+            <span class="accordion-title">CDP</span>
             <div class="accordion-icon"></div>
           </div>
           <div class="accordion-content">
-            <p>Snapchat er en dynamisk platform til at skabe forbindelse til et yngre og stærkt engageret publikum gennem kreativt og interaktivt indhold. Med funktioner som Stories, Lenses og Geofilters kan virksomheder opbygge brandkendskab og styrke brugernes interaktion på sjove og innovative måder. Snapchats annonceringsværktøjer tilbyder præcis målretning og målbare resultater, hvilket gør det til et ideelt valg for kampagner, der prioriterer autenticitet og øjeblikkelig engagement.</p>
+            <p>En CDP muliggører at udnytte det fulde potentiale af jeres kundedata – med indsigt og vækst til følge. Vi er din rådgiver gennem hele processen. Fra systemvalg til den tekniske implementering og til aktivering i annonceplatformene.</p>
           </div>
         </div>
 
         <div class="accordion-item">
           <div class="accordion-header">
-            <span class="accordion-title">Pinterest</span>
+            <span class="accordion-title">Tracking & analytics</span>
             <div class="accordion-icon"></div>
           </div>
           <div class="accordion-content">
-            <p>Pinterest er en visuel inspirationsplatform, der hjælper virksomheder med at fremvise deres produkter, inspirere kunder og drive trafik til deres hjemmesider. Ved at skabe iøjnefaldende pins og boards kan virksomheder nå et engageret publikum, der leder efter ideer og løsninger. Pinterests unikke søgefunktion og analyser giver dig mulighed for at forbinde med potentielle kunder på inspirationsstadiet og omdanne deres interesse til leads og salg.</p>
+            <p>Jeres data og KPI’er er vores afsæt ind i tracking-arbejdet. Den rigtige tracking kræver analyse og forståelse for jeres forretning. Tracking er et teknisk håndværk, der kræver konstant opmærksomhed på både nye såvel som gamle teknologiske og juridiske krav for at sikre værdi og compliance. Vi ved, at tracking kan overlappe med andre afdelinger i jeres virksomhed. Dem er vi også vant til at arbejde sammen med. Om scoping, ressourcer og effekt.</p>
           </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <div class="accordion-header">
+          <span class="accordion-title">Data integration</span>
+          <div class="accordion-icon"></div>
+        </div>
+        <div class="accordion-content">
+          <p>Vi hjælper med at belyse jeres data på nye måder, så den kan danne grundlag for strategiske, operationelle og taktiske beslutningsprocesser fremover. Din data er kun brugbar, hvis den bliver modelleret med henblik på formål og med tanke på kvalitet igennem alle trin – vi tilpasser altid dit setup til dine behov og sørger samtidig for, at man kan stole på det data man bruger.</p>
         </div>
       </div>
     </section>
