commit inden integration af AiAPI

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="container">
         <div class="text-block">
           <h2>Hvem er Refyne?</h2>
-          <p>Vi er et datadrevet marketingbureau, der skaber vækst gennem SEO, betalt søgning og sociale medier. Med gennemsigtighed, dataanalyse og branchens bedste kundetilfredshed leverer vi målbare resultater, der gør en forskel.</p>
+          <p class="dynamicp">Vi er et datadrevet marketingbureau, der skaber vækst gennem SEO, betalt Google-annoncering og sociale medier. Med gennemsigtighed, dataanalyse og branchens bedste kundetilfredshed leverer vi målbare resultater, der gør en forskel.</p>
         </div>
         <img src="assets/1696028.jpg" alt="Section 2" class="sec2-image" />
       </div>
