--- a/index.html
+++ b/index.html
@@ -171,31 +171,41 @@
         });
       });
 
-    //   API
+      //   API
 
       document.addEventListener("DOMContentLoaded", function () {
         const urlParams = new URLSearchParams(window.location.search);
-        const keyword = urlParams.get("keyword") || "b2b markedsføring";
+        const keyword = urlParams.get("keyword");
 
-        // Update h3 with keyword
-        const h3Element = document.querySelector("h3");
-        if (h3Element) {
-          h3Element.textContent = keyword;
+        if (!keyword) {
+          // No keyword in URL - keep original content
+          return;
+        } else {
+          // We have a keyword - update content
+          const h3Element = document.querySelector("h3");
+          if (h3Element) {
+            h3Element.textContent = keyword;
+          }
+
+          fetch(`/.netlify/functions/generate-content?keyword=${encodeURIComponent(keyword)}`)
+            .then((response) => response.json())
+            .then((data) => {
+              const dynamicP = document.querySelector(".dynamicp");
+              if (dynamicP) {
+                if (!dynamicP.dataset.originalContent) {
+                  dynamicP.dataset.originalContent = dynamicP.textContent;
+                }
+                dynamicP.textContent = data.text;
+              }
+            })
+            .catch((error) => {
+              console.error("Error:", error);
+              const dynamicP = document.querySelector(".dynamicp");
+              if (dynamicP && dynamicP.dataset.originalContent) {
+                dynamicP.textContent = dynamicP.dataset.originalContent;
+              }
+            });
         }
-
-        // Fetch generated content from Netlify function
-        fetch(`/.netlify/functions/generate-content?keyword=${encodeURIComponent(keyword)}`)
-          .then((response) => response.json())
-          .then((data) => {
-            // Update dynamic paragraph
-            const dynamicP = document.querySelector(".dynamicp");
-            if (dynamicP) {
-              dynamicP.textContent = data.text;
-            }
-          })
-          .catch((error) => {
-            console.error("Error:", error);
-          });
       });
     </script>
   </body>
