New kontakt image

--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
 
     <section class="section-5">
       <h2>Kontakt os</h2>
-      <img src="assets/jens-casper-kontakt.png" class="section-5-image" alt="Contact" />
+      <div class="section-5-image-container">
+        <img src="assets/jens-casper-kontakt.png" class="section-5-image" alt="Contact" />
+      </div>
       <p>Vi vil gerne høre mere om jeres udfordringer og give jer vores tanker og overvejelser på et møde eller opkald.</p>
       <form>
         <input type="text" name="firstname" placeholder="First Name" required />
