Update kontakt image with grid

--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
     </section>
 
     <section class="section-5">
-      <h2>Kontakt os</h2>
       <div class="section-5-image-container">
         <img src="assets/jens-casper-kontakt.png" class="section-5-image" alt="Contact" />
+        <div class="section-5-overlay">
+          <h2>Kontakt os</h2>
+        </div>
       </div>
       <p>Vi vil gerne høre mere om jeres udfordringer og give jer vores tanker og overvejelser på et møde eller opkald.</p>
       <form>
