--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
       </div>
     </section>
 
+    <section class="cards">
+      <div class="card">
+        <div class="card-details">
+          <p class="text-title">Card title</p>
+          <p class="text-body">Here are the details of the card</p>
+        </div>
+        <button class="card-button">More info</button>
+      </div>
+      <div class="card">
+        <div class="card-details">
+          <p class="text-title">Card title</p>
+          <p class="text-body">Here are the details of the card</p>
+        </div>
+        <button class="card-button">More info</button>
+      </div>
+      <div class="card">
+        <div class="card-details">
+          <p class="text-title">Card title</p>
+          <p class="text-body">Here are the details of the card</p>
+        </div>
+        <button class="card-button">More info</button>
+      </div>
+    </section>
+
     <section class="section-3 container">
       <div class="subheading">Service Lines</div>
       <h2>Hvilken service line ønsker du rådgivning og hjælp til?</h2>
