--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
     <section class="cards">
       <div class="card">
         <div class="card-details">
-          <p class="text-title">Card title</p>
-          <p class="text-body">Here are the details of the card</p>
+          <p class="text-title">Tillid gennem transparens</p>
+          <p class="text-body">I kan se opgaver, timeforbrug, samt hvilke konsulenter der har løst opgaverne og deres pris.</p>
         </div>
-        <button class="card-button">More info</button>
+        <button class="card-button">Kontakt os</button>
       </div>
       <div class="card">
         <div class="card-details">
-          <p class="text-title">Card title</p>
-          <p class="text-body">Here are the details of the card</p>
+          <p class="text-title">Kundetilfredshed</p>
+          <p class="text-body">Vi skal tilvælges fordi vores niveau er højt. Hver måned. Derfor kan I se vores kundetilfredshed - helt tilbage til starten. d</p>
         </div>
-        <button class="card-button">More info</button>
+        <button class="card-button">Kontakt os</button>
       </div>
       <div class="card">
         <div class="card-details">
-          <p class="text-title">Card title</p>
-          <p class="text-body">Here are the details of the card</p>
+          <p class="text-title">Referencer</p>
+          <p class="text-body">I skal ikke høre det hele fra os. Derfor giver vi mulighed for at spørge enhver kunde vi har om deres samarbejde med Refyne.</p>
         </div>
-        <button class="card-button">More info</button>
+        <button class="card-button">Kontakt os</button>
       </div>
     </section>
 
