--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </section>
     <section class="cards">
-      <h2>Vores kunder beslutter med afsæt i data. Gør du?</h2>
+      <div><h2>Vores kunder beslutter med afsæt i data. Gør du?</h2></div>
       <div class="card">
         <div class="card-details">
           <p class="text-title">Tillid gennem transparens</p>
