Card container added to center

--- a/index.html
+++ b/index.html
@@ -51,29 +51,33 @@
       </div>
     </section>
     <section class="cards">
-      <div><h2>Vores kunder beslutter med afsæt i data. Gør du?</h2></div>
-      <div class="card">
-        <div class="card-details">
-          <p class="text-title">Tillid gennem transparens</p>
-          <p class="text-body">I kan se opgaver, timeforbrug, samt hvilke konsulenter der har løst opgaverne og deres pris.</p>
-        </div>
-        <button class="card-button">Kontakt os</button>
+  <div>
+    <h2>Vores kunder beslutter med afsæt i data. Gør du?</h2>
+  </div>
+  <div class="cards-container">
+    <div class="card">
+      <div class="card-details">
+        <p class="text-title">Tillid gennem transparens</p>
+        <p class="text-body">I kan se opgaver, timeforbrug, samt hvilke konsulenter der har løst opgaverne og deres pris.</p>
       </div>
-      <div class="card">
-        <div class="card-details">
-          <p class="text-title">Kundetilfredshed</p>
-          <p class="text-body">Vi skal tilvælges fordi vores niveau er højt. Hver måned. Derfor kan I se vores kundetilfredshed - helt tilbage til starten.</p>
-        </div>
-        <button class="card-button">Kontakt os</button>
+      <button class="card-button">Kontakt os</button>
+    </div>
+    <div class="card">
+      <div class="card-details">
+        <p class="text-title">Kundetilfredshed</p>
+        <p class="text-body">Vi skal tilvælges fordi vores niveau er højt. Hver måned. Derfor kan I se vores kundetilfredshed - helt tilbage til starten.</p>
       </div>
-      <div class="card">
-        <div class="card-details">
-          <p class="text-title">Referencer</p>
-          <p class="text-body">I skal ikke høre det hele fra os. Derfor giver vi mulighed for at spørge enhver kunde vi har om deres samarbejde med Refyne.</p>
-        </div>
-        <button class="card-button">Kontakt os</button>
+      <button class="card-button">Kontakt os</button>
+    </div>
+    <div class="card">
+      <div class="card-details">
+        <p class="text-title">Referencer</p>
+        <p class="text-body">I skal ikke høre det hele fra os. Derfor giver vi mulighed for at spørge enhver kunde vi har om deres samarbejde med Refyne.</p>
       </div>
-    </section>
+      <button class="card-button">Kontakt os</button>
+    </div>
+  </div>
+</section>
 
     <section class="section-3 container">
       <div class="subheading">Service Lines</div>
