--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img class="organic-blob" src="assets/Organisk-blob (1) copy.png" alt="lineart" />
     </section>
     <section class="logo-grid">
-      <img src="assets/skall_logo.svg" alt="Logo 1" class="logo" />
+      <img src="assets/body-logo.svg" alt="Logo 1" class="logo" />
       <img src="assets/besteller.png" alt="Logo 2" class="logo" />
       <img src="assets/Zizzi_logo-01.png" alt="Logo 3" class="logo" />
       <img src="assets/logo-rotate.svg" alt="Logo 4" class="logo" />
@@ -51,33 +51,33 @@
       </div>
     </section>
     <section class="cards">
-  <div>
-    <h2>Vores kunder beslutter med afsæt i data. Gør du?</h2>
-  </div>
-  <div class="cards-container">
-    <div class="card">
-      <div class="card-details">
-        <p class="text-title">Tillid gennem transparens</p>
-        <p class="text-body">I kan se opgaver, timeforbrug, samt hvilke konsulenter der har løst opgaverne og deres pris.</p>
+      <div>
+        <h2>Vores kunder beslutter med afsæt i data. Gør du?</h2>
       </div>
-      <button class="card-button">Kontakt os</button>
-    </div>
-    <div class="card">
-      <div class="card-details">
-        <p class="text-title">Kundetilfredshed</p>
-        <p class="text-body">Vi skal tilvælges fordi vores niveau er højt. Hver måned. Derfor kan I se vores kundetilfredshed - helt tilbage til starten.</p>
+      <div class="cards-container">
+        <div class="card">
+          <div class="card-details">
+            <p class="text-title">Tillid gennem transparens</p>
+            <p class="text-body">I kan se opgaver, timeforbrug, samt hvilke konsulenter der har løst opgaverne og deres pris.</p>
+          </div>
+          <button class="card-button">Kontakt os</button>
+        </div>
+        <div class="card">
+          <div class="card-details">
+            <p class="text-title">Kundetilfredshed</p>
+            <p class="text-body">Vi skal tilvælges fordi vores niveau er højt. Hver måned. Derfor kan I se vores kundetilfredshed - helt tilbage til starten.</p>
+          </div>
+          <button class="card-button">Kontakt os</button>
+        </div>
+        <div class="card">
+          <div class="card-details">
+            <p class="text-title">Referencer</p>
+            <p class="text-body">I skal ikke høre det hele fra os. Derfor giver vi mulighed for at spørge enhver kunde vi har om deres samarbejde med Refyne.</p>
+          </div>
+          <button class="card-button">Kontakt os</button>
+        </div>
       </div>
-      <button class="card-button">Kontakt os</button>
-    </div>
-    <div class="card">
-      <div class="card-details">
-        <p class="text-title">Referencer</p>
-        <p class="text-body">I skal ikke høre det hele fra os. Derfor giver vi mulighed for at spørge enhver kunde vi har om deres samarbejde med Refyne.</p>
-      </div>
-      <button class="card-button">Kontakt os</button>
-    </div>
-  </div>
-</section>
+    </section>
 
     <section class="section-3 container">
       <div class="subheading">Service Lines</div>
