--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                   }
 
                   // Generate a relevant heading based on the paragraph content
-                  let newHeading = `${keyword.charAt(0).toUpperCase()}${keyword.slice(1).toLowerCase()} Eksperter`;
+                  let newHeading = `${keyword.charAt(0).toUpperCase()}${keyword.slice(1).toLowerCase()} eksperter`;
 
                   // If the API response includes a title, use that instead
                   if (data.title) {
