--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
     <section class="section-3 container">
       <div class="subheading">Service Lines</div>
       <h2>Hvilken service line ønsker du rådgivning og hjælp til?</h2>
-      <p>Hver paid social platform tilbyder unikke muligheder for at nå jeres målgruppe og skabe engagement. Fra Metas brede rækkevidde til TikToks kreative storytelling – hver platform har sine styrker og formater, der kan tilpasses jeres brand. Her giver vi et overblik over, hvordan de forskellige platforme kan hjælpe med at styrke jeres digitale tilstedeværelse.</p>
-
+      <p>Når I søger rådgivning og hjælp til en specifik service line, er det vigtigt at vælge den, der bedst understøtter jeres forretningsmål og digitale strategi. Uanset om det drejer sig om at optimere jeres synlighed gennem Paid Search, forbedre jeres organiske rækkevidde med SEO, eller sikre præcis måling og indsigt via Tracking & Analytics, kan vi hjælpe. Vores eksperter dækker også områder som Data Integration og CDP, der kan sikre en mere sammenhængende og effektiv udnyttelse af jeres data på tværs af kanaler. Sammen finder vi den løsning, der skaber mest værdi for jeres virksomhed.</p>
       <div class="accordion">
         <div class="accordion-item">
           <div class="accordion-header">
