--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h2>Hvem er Refyne?</h2>
           <p class="dynamicp">Vi er et datadrevet marketingbureau, der skaber vækst gennem SEO, betalt Google-annoncering og sociale medier. Med gennemsigtighed, dataanalyse og branchens bedste kundetilfredshed leverer vi målbare resultater, der gør en forskel.</p>
         </div>
-        <img src="assets/1696028.jpg" alt="Section 2" class="sec2-image" />
+        <img src="assets/1696028.webp" alt="Section 2" class="sec2-image" />
       </div>
     </section>
     <section class="cards">
@@ -147,7 +147,7 @@
 
     <section class="section-5">
       <div class="section-5-image-container">
-        <img src="assets/jens-casper-kontakt.png" class="section-5-image" alt="Contact" />
+        <img src="assets/jens-casper-kontakt.webp" class="section-5-image" alt="Contact" />
         <div class="section-5-overlay">
           <h2>Kontakt os</h2>
         </div>
