--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#" class="btn">Læs mere om os</a>
         <a href="#" class="btn btn-fill">Kontakt en af vores specialister <span class="arrow">→</span></a>
       </div>
-      <img class="organic-blob" src="assets/Organisk-blob (1) copy.png" alt="lineart" />
+      <img class="organic-blob" src="assets/Organisk-blob.webp" alt="lineart" />
     </section>
     <section class="logo-grid">
       <img src="assets/body-logo.svg" alt="Logo 1" class="logo" />
