--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </section>
     <section class="logo-grid">
       <img src="assets/body-logo.svg" alt="Logo 1" class="logo" />
-      <img src="assets/besteller.png" alt="Logo 2" class="logo" />
-      <img src="assets/Zizzi_logo-01.png" alt="Logo 3" class="logo" />
+      <img src="assets/besteller.webp" alt="Logo 2" class="logo" />
+      <img src="assets/Zizzi_logo-01.webp" alt="Logo 3" class="logo" />
       <img src="assets/logo-rotate.svg" alt="Logo 4" class="logo" />
       <img src="assets/Logo_BK.webp" alt="Logo 5" class="logo" />
       <img src="assets/noisy.webp" alt="Logo 6" class="logo" />
