--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Refyne er et datadrevet performance marketing bureau, der skaber målbare resultater gennem SEO, Google Ads og sociale medier. Få en transparent marketingstrategi baseret på data og ekspertise." />
+
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css" />
     <!-- FONTS -->
